[project]
name = "pigh-tides"
version = "0.1.0"
description = ""
authors = [
    {name = "Matt Menzenski", email = "matt.menzenski@gmail.com"},
]
dependencies = [
    "textual>=0.1.18",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]

[tool.pdm]

[tool.pdm.scripts]
get-version = "python -c \"import toml;f = open('pyproject.toml','r').read();print(toml.loads(f)['project']['version'])\""
imports-check = "isort . --check-only --diff"
imports-fix = "isort ."
lint-check = "black . --check --diff"
lint-fix = "black ."
test = "pytest"

[tool.pdm.dev-dependencies]
testing = [
    "pytest>=7.1.2",
]
lint = [
    "black>=22.8.0",
    "isort>=5.10.1",
]
version = [
    "toml>=0.10.2",
]

[tool.black]
line-length = 120
target-version = ['py37']

[tool.isort]
profile = "black"
force_sort_within_sections = true
include_trailing_comma = true
line_length = 120

[tool.pytest.ini_options]
addopts = "-v --disable-warnings -s"
testpaths = [
    "tests"
]
log_cli = true
log_cli_level = "INFO"
